[package]
name = "ava-database"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "The synchronous key/value Database trait family, sentinel errors, byte-exact helpers, and KV backends (M1 / specs 04 §1-§2)."

# Dependency direction (specs/04 §1): ava-database depends only on M0 primitive
# crates. M1.1-M1.3 only need ava-types (Id) for the put_id/get_id helpers.
[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
sha2 = { workspace = true }
ava-types = { path = "../ava-types" }
# linkeddb (§2.7) persists its doubly-linked-list nodes via the M0 linearcodec
# (byte-exact, §10.6).
ava-codec = { path = "../ava-codec" }

# meterdb (§2.5) wraps any Database in Prometheus counters/gauges under the exact
# Go metric names (calls/duration/size, method label). linkeddb (§2.7) caches
# the head key + decoded nodes in bounded LRUs.
prometheus = { workspace = true }
lru = "0.12"

# rocksdb (§2.1) is the on-disk default backend and the one FFI/unsafe-permitted
# backend. Optional + feature-gated so the crate stays buildable where the C++
# FFI toolchain (clang/libclang/cmake) is unavailable. `rust-rocksdb` is the
# `rocksdb` crate; LZ4/Snappy compression matches avalanchego's leveldb tuning.
# tempfile backs `RocksDb::open_temp` (a real on-disk dir, owned by the DB).
rocksdb = { version = "0.22", optional = true, default-features = false, features = [
  "lz4",
  "snappy",
] }
tempfile = { version = "3", optional = true }

# The conformance battery (dbtest) + BTreeMap-oracle proptest ship behind the
# `testutil` feature so backends in this and other crates can run the shared
# suite (02 §3.3, §7.2). proptest is a hard (optional) dep here — not dev —
# because the battery is a library of helpers, not a test binary.
proptest = { workspace = true, optional = true }

# rpcdb (§2.8) is a `Database` over gRPC (the rpcchainvm plugin protocol). The
# tonic client/server + the types generated from `proto/rpcdb/rpcdb.proto` are
# feature-gated so the crate stays buildable without the proto toolchain. The
# sync `Database` trait blocks on the async tonic client via a per-client tokio
# runtime (`block_on`), matching the call-site-blocking pattern (04 §1.2).
prost = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }

[features]
# The reusable conformance + proptest battery (specs/02 §7.2). Off by default so
# production builds don't pull proptest; backend conformance tests enable it.
testutil = [ "dep:proptest" ]
# The on-disk RocksDB backend (§2.1). Off by default (needs the C++ FFI
# toolchain); enabled by `--all-features` and the rocksdb conformance test.
rocksdb = [ "dep:rocksdb", "dep:tempfile" ]
# The rpcdb gRPC client/server backend (§2.8, 15 §3.4). Off by default (needs the
# proto toolchain: `protoc`); enabled by `--all-features` and the rpcdb
# conformance test. Pulls tonic/prost/tokio/bytes + the tonic-build build-dep.
rpcdb = [ "dep:prost", "dep:tonic", "dep:tokio", "dep:bytes" ]
# The R2 offline Go-data-dir import tool (04 §11, 00 §11.2 R2). Off by default;
# wired into the CLI in M12. The backend-agnostic `GoDbSource` trait + the
# byte-exact `migrate` driver + the pluggable `verify` need NO new third-party
# deps (they ride on the existing `Database` trait family + `anyhow`). The
# concrete on-disk readers are best-effort: `RocksDbCompatSource` (leveldb fast
# path) additionally needs the `rocksdb` feature; the Pebble path is a documented
# Go-sidecar design with a stub spawn (see docs/migration.md).
migrate = [  ]

[build-dependencies]
# Generates the rpcdb tonic client/server + prost types from
# `proto/rpcdb/rpcdb.proto` into OUT_DIR at build time (not committed; 01 §8.1).
# build.rs only invokes it when the `rpcdb` feature is active (CARGO_FEATURE_RPCDB),
# so non-rpcdb builds never need `protoc`; the crate itself is a cheap build-time dep.
tonic-build = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
# rpcdb conformance test transport: a multi-thread tokio runtime hosts an
# in-process tonic server over a loopback TCP port; the client dials it. Only
# used by `conformance_rpcdb.rs` (gated on the `rpcdb` feature).
tokio = { workspace = true }
tonic = { workspace = true }

[lints]
workspace = true
