# Copyright (C) 2019, Ava Labs, Inc. All rights reserved.
# See the file LICENSE for licensing terms.

[package]
name = "ava-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Consensus engine framework: the inbound op state-machine traits (Handler/Engine/NoOpHandler), AppError, and the engine-facing Sender (port of snow/engine/common) (M3 / specs 06 §4.1, §5.3)."

# Tier T2b. The engine sees pre-authenticated NodeIds (ava-types), reuses the
# ChainContext/EngineState/Id types from ava-snow, the Connector trait from
# ava-validators, and the VM->engine notification enum from ava-vm.
[dependencies]
ava-types = { path = "../ava-types" }
ava-snow = { path = "../ava-snow" }
ava-validators = { path = "../ava-validators" }
ava-vm = { path = "../ava-vm" }
# The networking glue reads time through the injected clock: monotonic for
# latency/deadlines (specs 24 §B.4), and the benchlist EWMA timestamps.
ava-utils = { path = "../ava-utils" }
# The concrete `OutboundSender` (specs 06 §5.3) translates each engine `send_*`
# into a `proto/p2p` wire message (ava-message) and hands it to the network's
# `ExternalSender` (ava-network `Network::send`/`gossip`). Both are lower-tier
# than the engine (neither depends on ava-engine), so this stays acyclic.
ava-message = { path = "../ava-message" }
ava-network = { path = "../ava-network" }
# Construct `proto/p2p` message fields (`prost::bytes::Bytes`) directly.
bytes = { workspace = true }

async-trait = { workspace = true }
thiserror = { workspace = true }
# Engine HealthCheck reports through the health API as a JSON value.
serde_json = { workspace = true }
# NoOpHandler logs+drops at debug level (mirrors common/no_ops_handlers.go).
tracing = { workspace = true }
# ChainHandler is one tokio task draining a bounded mpsc + VM channel + gossip
# ticker via tokio::select!; the AdaptiveTimeoutManager fires over tokio time.
tokio = { workspace = true, features = [ "macros", "rt", "sync", "time" ] }
# DelayQueue (timeout firing) needs the `time` feature; CancellationToken /
# TaskTracker (halt + leaked-task drain) come from `rt`. NOTE: workspace pins
# tokio-util with only `["rt"]`; `time` is added here for DelayQueue.
tokio-util = { workspace = true, features = [ "time", "rt" ] }
# The consensus core (`ava-snow`) decides accept/reject synchronously, but the
# engine's `block.ChainVM` block accept/reject are async. The block adaptor
# bridges them via a standalone `futures::executor::block_on` (a non-tokio
# executor, so it does not re-enter the engine's runtime) — see
# `snowman::adaptor`. M3.14+ revisits this for VMs that do tokio I/O in accept.
futures = { workspace = true }

[dev-dependencies]
# Unit tests drive the async handler methods on the current-thread runtime;
# `test-util` enables start_paused + tokio::time::advance for the §B.2 timing tests.
tokio = { workspace = true, features = [ "macros", "rt", "sync", "time", "test-util" ] }
# Sentinel-error assertions on config verify.
assert_matches = { workspace = true }
# The engine integration + property tests drive the real engine against the
# in-memory test VM (`ava-vm` testutil), the real `Topological` consensus
# (`ava-snow`), the `DefaultManager` sampler, and a recording mock Sender/Router.
ava-vm = { path = "../ava-vm", features = [ "testutil" ] }
ava-snow = { path = "../ava-snow", features = [ "testutil" ] }
ava-database = { path = "../ava-database" }
ava-version = { path = "../ava-version" }
tokio-util = { workspace = true, features = [ "time", "rt" ] }
# Property tests for liveness / preference monotonicity.
proptest = { workspace = true }
# The support harness derives block ids the same way the test VM does.
sha2 = { workspace = true }
